fix(code-snippet): Update bottom spacing & fix bug to only show more btn when needed (#972)
* chore: update github urls to ibm

* fix(code-snippet): Update bottom spacing and fix bug so expand btn only shows if needed

* fix: update sample code

* chore: update sample code

--- a/src/components/code-snippet/_code-snippet.scss
+++ b/src/components/code-snippet/_code-snippet.scss
@@ -74,13 +74,13 @@
   // Multi Line Snippet
   .#{$prefix}--snippet--multi {
     @include bx--snippet;
-    padding: $spacing-md $spacing-3xl $spacing-md $spacing-lg;
+    padding: $spacing-md $spacing-3xl $spacing-xl $spacing-lg;
   }
 
   .#{$prefix}--snippet--multi .#{$prefix}--snippet-container {
     overflow: hidden;
     position: relative;
-    max-height: rem(254px);
+    max-height: rem(238px);
     min-height: rem(56px);
     transition: all $transition--base $carbon--standard-easing;
   }
@@ -170,7 +170,7 @@
     bottom: 0;
   }
 
-  .#{$prefix}--snippet-btn--expand--hide.#{$prefix}--snippet-btn--expand {
+  .#{$prefix}--snippet-btn--expand--hide .#{$prefix}--snippet-btn--expand {
     display: none;
   }
 
